Add new endpoint for funding and update existing endpoint model.
