# demo/src/main/java/com/citi/yourbank/vo/TransferFundRequestVO.java
@@ -1,0 +1,10 @@
+package com.citi.yourbank.vo;
+
+import lombok.Data;
+
+@Data
+public class TransferFundRequestVO {
+	private String accountId;
+	
+	private double amount;
+}
