# demo/src/main/resources/swagger.yml
@@ -83,7 +83,7 @@
           "200": {
             "description": "Successful login",
             "schema": {
-              "$ref": "#/definitions/CustomerProfileVO"
+              "$ref": "#/definitions/CustomerProfile"
             }
           },
           "201": {
@@ -132,7 +132,7 @@
           "200": {
             "description": "user registered successfully",
             "schema": {
-              "$ref": "#/definitions/CustomerProfileVO"
+              "$ref": "#/definitions/CustomerProfile"
             }
           },
           "201": {
@@ -242,7 +242,10 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/AccountSummary"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/AccountSummary"
+              }
             }
           },
           "201": {
@@ -300,6 +303,65 @@
           }
         }
       }
+    },
+    "/digital/yourbank/customer/{userId}/fund": {
+      "post": {
+        "tags": [
+          "your-bank-controller"
+        ],
+        "summary": "transferFund",
+        "operationId": "transferFundUsingPOST",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "userId",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "request",
+            "description": "transferFundRequest",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TransferFundRequestVO"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "fund transferred successfully",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Transaction"
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -339,12 +401,12 @@
           "type": "string"
         },
         "ownerDetail": {
-          "$ref": "#/definitions/OwnerDetail"
+          "$ref": "#/definitions/CustomerProfile"
         }
       },
       "title": "AccountSummary"
     },
-    "CustomerProfileVO": {
+    "CustomerProfile": {
       "type": "object",
       "properties": {
         "firstName": {
@@ -357,7 +419,7 @@
           "type": "string"
         }
       },
-      "title": "CustomerProfileVO"
+      "title": "CustomerProfile"
     },
     "LinkAccountRequest": {
       "type": "object",
@@ -393,21 +455,6 @@
       },
       "title": "OpenAccountRequest"
     },
-    "OwnerDetail": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "userId": {
-          "type": "string"
-        }
-      },
-      "title": "OwnerDetail"
-    },
     "RegisterUserRequest": {
       "type": "object",
       "properties": {
@@ -432,6 +479,9 @@
     "Transaction": {
       "type": "object",
       "properties": {
+        "contributor": {
+          "$ref": "#/definitions/CustomerProfile"
+        },
         "transactionAmount": {
           "type": "number",
           "format": "double"
@@ -447,6 +497,19 @@
         }
       },
       "title": "Transaction"
+    },
+    "TransferFundRequestVO": {
+      "type": "object",
+      "properties": {
+        "accountId": {
+          "type": "string"
+        },
+        "amount": {
+          "type": "number",
+          "format": "double"
+        }
+      },
+      "title": "TransferFundRequestVO"
     }
   }
 }
